<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LangDetector">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_detector_tv"
            android:textColor="@color/dark_crimson"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/edit_text_border_hard"
            android:hint="@string/lang_hint_et"
            android:padding="5sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detect_text_btn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/border"
            android:text="@string/detect_text_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>