<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10sp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detected_text_tv"
        android:textColor="@color/dark_crimson"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detected_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textColor="@color/light_crimson"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_lang_text"
            android:textColor="@color/amaranth"
            android:textSize="18sp" />

        <ImageButton
            android:layout_gravity="center_vertical"
            android:id="@+id/share_button"
            android:layout_width="20sp"
            android:layout_marginLeft="10sp"
            android:layout_height="20sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/share_button" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/positive_btn"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:maxWidth="210sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/border"
        android:text="@string/positive_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>